<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>game.server.manager</groupId>
        <artifactId>game-server-manager</artifactId>
        <version>1.0.0</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>game-server-manager-server</artifactId>
    <version>1.0.0</version>
    <name>game-server-manager-server</name>

    <description>主服务</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>

        <!--  web -->
        <dependency>
            <groupId>game.server.manager</groupId>
            <artifactId>game-server-manager-web</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!--  api -->
        <dependency>
            <groupId>game.server.manager</groupId>
            <artifactId>game-server-manager-api</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!--  doc -->
        <dependency>
            <groupId>game.server.manager</groupId>
            <artifactId>game-server-manager-doc</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!--  event -->
        <dependency>
            <groupId>game.server.manager</groupId>
            <artifactId>game-server-manager-event</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!-- mapstruct -->
        <dependency>
            <groupId>game.server.manager</groupId>
            <artifactId>game-server-manager-mapstruct</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!-- websocket -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-websocket</artifactId>
        </dependency>

        <!-- 授权相关 -->
        <dependency>
            <groupId>game.server.manager</groupId>
            <artifactId>game-server-manager-auth</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!-- redis -->
        <dependency>
            <groupId>game.server.manager</groupId>
            <artifactId>game-server-manager-redis</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!-- 日志相关 -->
        <dependency>
            <groupId>game.server.manager</groupId>
            <artifactId>game-server-manager-log</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!--  数据库相关-->
        <dependency>
            <groupId>game.server.manager</groupId>
            <artifactId>game-server-manager-mybatis-plus</artifactId>
            <version>1.0.0</version>
        </dependency>

        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.30</version>
        </dependency>

        <!-- jsch的方式 远程连接的包-->
        <dependency>
            <groupId>com.jcraft</groupId>
            <artifactId>jsch</artifactId>
            <version>0.1.55</version>
        </dependency>

        <!-- Quartz -->
        <dependency>
            <groupId>org.quartz-scheduler</groupId>
            <artifactId>quartz</artifactId>
            <version>2.3.2</version>
            <exclusions>
                <exclusion>
                    <groupId>com.mchange</groupId>
                    <artifactId>c3p0</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

    </dependencies>

    <build>
        <finalName>server</finalName>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- mapstruct 需要的配置 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
